--- a/app/src/main/res/layout/activity_downloader.xml
+++ b/app/src/main/res/layout/activity_downloader.xml
@@ -14,9 +14,14 @@
         android:text="@string/download" />
 
     <Button
-        android:enabled="false"
         android:id="@+id/displayButton"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/display" />
+
+    <Button
+        android:id="@+id/readButton"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="@string/read" />
 </LinearLayout>
